glFusion ChangeLog

v1.1.9
------
- Complete implementation of PLG_getItemInfo for each bundled plugin. (Mark)
- Forum: Implemented merge topic feature (Mark)
- Forum: Rewrote the moderation system to be more procedural. This will
  help with future enhancements to moderatoin features (Mark)
- Forum: Site Members report did not honor Forum Activity checkbox (Mark)
- Forum: Implemented per topic options (Disable BBCode, Disable Smilies,
  Disable URL Parse) (Mark)
   - 3 new Forum configuration options to set the default value for each
     of the new features
- Forum: Implemented automatic URL parsing for topics (Mark)
- Forum: Implemented user preference to specify view topic sort order (Mark)
- FileMgmt: Implemented configuration option to turn on / off ratings (Mark)
- Implemented reset rating for stories (Mark)

v1.1.8.pl2
----------
- Media Gallery: Fixed issue where PLG_itemSaved() was not called properly
  when doing mass media edit (Mark)
- Forum Plugin: Using the custom/ directory for templates in a sub-directory
  did not work properly (Mark)
- Forum Plugin: Process topic records in date order...
- Forum Plugin: Do not reset read counters when deleting topic (Mark)
- Forum Plugin: Fixed bug when moving / spliting topics - last reply
  dates / reply counts were not always properly maintained (Mark)
- Forum Plugin: Fixed error where creating a new forum on sites using
  MySQL 5 strict settings would crash with SQL error (Mark)
- Forum Plugin: Members of the Root group could not move topics to forums
  unless they were also listed as a moderator (Mark)
- Forum Plugin: The user's location display was broken (displays in the user
  block to the right) (Mark)
- Forum Plugin: Expose breadcrumb template variables in view topic (Mark)
        {forum_home} - Forum Index text
        {cat_name} - Current category name
        {cat_id} - Current category ID
        {forum_id} - Current forum ID
        {forum_name} - Current forum name